add Disabled Button function

--- a/src/uiComp/basicInput/buttons/Style.css
+++ b/src/uiComp/basicInput/buttons/Style.css
@@ -1,21 +1,39 @@
 .simpleButton {
-    background-color: rgb(43, 0, 122); /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
+  background-color: rgb(43, 0, 122); 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+.simpleButton:hover{
+cursor: pointer;
+}
+.accentButton {
+  background-color: rgb(199, 57, 14); 
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+}
+.accentButton:hover{
+cursor: pointer;
+}
 
-  .accentButton {
-    background-color: rgb(199, 57, 14); /* Green */
-    border: none;
-    color: white;
-    padding: 15px 32px;
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    font-size: 16px;
-  }
+.disableButton {
+background-color: rgb(94, 94, 94); 
+border: none;
+color: white;
+padding: 15px 32px;
+text-align: center;
+text-decoration: none;
+display: inline-block;
+font-size: 16px;
+opacity: 0.6;
+cursor: not-allowed;
+}
