--- a/src/uiComp/basicInput/buttons/Style.css
+++ b/src/uiComp/basicInput/buttons/Style.css
@@ -1,13 +1,11 @@
 .simpleButton {
-  width: 110px;
-  height: 32px;
   background-color: #32617d;
   color: white;
   text-align: center;
   display: inline-block;
-  padding-top: 10px;
+  padding: 5px 10px;
   font-family: SegoeUI;
-  font-size: 14px;
+  font-size: 16px;
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
@@ -25,15 +23,13 @@ box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
 }
 
 .accentButton {
-  width: 110px;
-  height: 32px;
   background-color: #c93a1d;;
   color: white;
   text-align: center;
   display: inline-block;
-  padding-top: 10px;
+  padding: 5px 10px;
   font-family: SegoeUI;
-  font-size: 14px;
+  font-size: 20px;
   font-weight: normal;
   font-style: normal;
   font-stretch: normal;
