--- a/src/uiComp/basicInput/buttons/Style.css
+++ b/src/uiComp/basicInput/buttons/Style.css
@@ -48,14 +48,32 @@ box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
   }
 
 .disableButton {
-background-color: rgb(94, 94, 94); 
-border: none;
-color: white;
-padding: 15px 32px;
-text-align: center;
-text-decoration: none;
-display: inline-block;
-font-size: 16px;
+  background-color: #949494;
+  color: white;
+  text-align: center;
+  display: inline-block;
+  padding: 5px 10px;
+  font-family: SegoeUI;
+  font-size: 16px;
+  font-weight: normal;
+  font-style: normal;
+  font-stretch: normal;
+  line-height: 1.43;
+  letter-spacing: normal;
+  text-align: center;
+  color: #ffffff;
 opacity: 0.6;
 cursor: not-allowed;
+}
+.circularButton{
+  border-radius: 100%;
+  padding: 10px 10px;
+  background-color: #120175;
+}
+.circularButton:hover{
+  background-color: #0e93ff;
+  cursor: pointer;
+}
+.circularButton:active{
+  background-color: #ffffff;
 }
