--- a/src/uiComp/basicInput/buttons/Style.css
+++ b/src/uiComp/basicInput/buttons/Style.css
@@ -1,226 +1,102 @@
-.simpleButton {
-  background-color: #32617d;
-  color: white;
-  text-align: center;
-  display: inline-block;
-  padding: 5px 10px;
-  font-family: SegoeUI;
-  font-size: 16px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.43;
-  letter-spacing: normal;
-  text-align: center;
-  color: #ffffff;
+.default{
+    cursor: pointer;
+    background-color: #32617d;
 }
-.simpleButton:hover{
-cursor: pointer;
-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
-}
-.simpleButton:active{
-  background-color: #3d779b;
-  box-shadow: 0 0 0px 0 rgba(0, 0, 0, 0);
+.default:active{
+    background-color: #72a7c7;
+    box-shadow: 0 0 0px 0 rgba(0, 0, 0, 0);
 }
 
-.accentButton {
-  background-color: #c93a1d;;
-  color: white;
-  text-align: center;
-  display: inline-block;
-  padding: 5px 10px;
-  font-family: SegoeUI;
-  font-size: 16px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.43;
-  letter-spacing: normal;
-  text-align: center;
-  color: #ffffff;
+.accent{
+    cursor: pointer;
+    background-color: #c93a1d;
 }
-.accentButton:hover{
-cursor: pointer;
-box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
+.accent:active{
+    box-shadow: 0 0 0px 0 rgba(0, 0, 0, 0);
 }
 
-.accentButton:active{
-  box-shadow: 0 0 0px 0 rgba(0, 0, 0, 0);
+.disabled{
+    cursor: not-allowed;
+    opacity: 0.5;
 }
 
-.disableButton {
-  background-color: #949494;
-  color: white;
-  text-align: center;
-  display: inline-block;
-  padding: 5px 10px;
-  font-family: SegoeUI;
-  font-size: 16px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.43;
-  letter-spacing: normal;
-  text-align: center;
-  color: #ffffff;
-  opacity: 0.6;
-  cursor: not-allowed;
+.button{
+    width: auto;
+    height: 32px;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    display: flex;
+    border: none;
+    outline: none;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+
+    font-family: Arial;
+    font-size: 14px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.43;
+    letter-spacing: normal;
+    text-align: center;
+    color: #ffffff;
 }
-.circularButton{
-  border-radius: 50%;
-  font-size: 2vw;
-  padding: 6px 6px 0px 6px;
-  text-decoration: none;
-  display: inline-block;
-  background-color: #000000;
-  color: rgba(255, 255, 255, 1);
+.button:hover{
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
+    }
+
+.iconButton{
+    width: 32px;
+    height: 32px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
+    border-radius: 50%;
+    border: none;
+    outline: none;
+
+    font-size: 2vw;
+    color: white;
 }
-.circularButton:hover{
-  background-color: #ffffff;
-  color: rgb(0, 0, 0);
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 10);
-  
-  cursor: pointer;
-}
-.circularButton:active{
-  background-color: #72a7c7;
-  box-shadow: 0 0 0px 0 rgba(0, 0, 0, 0.35);
+.iconButton:hover{
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
 }
 
-.dropdown{
-  border: solid 1px #000000;
-  background-color: rgb(255, 255, 255);
-  display: inline-block;
-}
 
-.dropdown:hover{
-  border: solid 1px #000000;
-  background-color: #72a7c7;
-  cursor: pointer;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
+.dropBox{
+    position: absolute;
+    width: auto;
+    height: auto;
+    box-shadow: 0 3px 6px 0 rgba(0, 0, 0, 0.16);
+    border: solid 1px #707070;
+    background-color: #d8e4eb;
+    z-index: 1;
 }
-
-.dd-head{
-  padding: 0px 5px 5px 5px;
-  text-align: left;
-  display: inline-block;
-  font-family: SegoeUI;
-  font-size: 16px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.43;
-  letter-spacing: normal;
-  text-align: center;
-}
-.dd-body{
-  position: absolute;
-  background-color: #F4F5F5;
-  border: solid 1px #000000;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
-}
-.dd-split{
-  padding: 0px 5px 5px 5px;
-  text-align: left;
-  display: inline-block;
-  font-family: SegoeUI;
-  font-size: 16px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.43;
-  letter-spacing: normal;
-  text-align: center;
-}
-
-.split{
-  background-color: rgb(255, 255, 255);
-  display: inline-block;
-}
-.sp-head{
-  background-color: #32617d;
-  color: #ffffff;
-  padding: 5px 10px;
-  text-align: left;
-  display: inline-block;
-  font-family: SegoeUI;
-  font-size: 16px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.43;
-  letter-spacing: normal;
-  text-align: center;
-}
-
-.sp-head:hover{
-  cursor: pointer;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
-}
-.sp-head:active{
-  box-shadow: 0 0 0px 0 rgba(0, 0, 0, 0.6);
-  background-color: #72a7c7;
-}
-.sp-head-active{
-  cursor: pointer;
-  color: #ffffff;
-  padding: 5px 10px;
-  text-align: left;
-  display: inline-block;
-  font-family: SegoeUI;
-  font-size: 16px;
-  font-weight: normal;
-  font-style: normal;
-  font-stretch: normal;
-  line-height: 1.43;
-  letter-spacing: normal;
-  text-align: center;
-  box-shadow: 0 0 0px 0 rgba(0, 0, 0, 0.6);
-  background-color: #72a7c7;
-}
-
-.sp-body{
-  list-style-type: none;
-  box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.6);
-  position: absolute;
-  color: #000000;
-  padding: 5px 10px;
-  text-align: center;
-  font-family: SegoeUI;
-  font-size: 16px;
-  margin: 0;
-  padding: 0;
-  border-bottom: solid 1px #000000;
-  border-left: solid 1px #000000;
-  border-right: solid 1px #000000;
-  background-color: #72a7c7;
-}
-
-.sp-item:hover{
-  cursor: pointer;
-  background-color: #ffffff;
-}
+.dropBox:hover{
+    box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.747);
+    }
 
 .flip{
-  font-size: 1vw;
-  padding: 1px 1px 0px 1px;
-  background-color: white;
-  color: #72a7c7;
-  border: solid #72a7c7 1px; 
-}
+    display: flex;
+    border: none;
+    outline: none;
+    justify-content: center;
+    align-items: center;
+    user-select: none;
 
-.flip:hover{
-  color: #3d779b;
-}
-
-.flip-label{
-  font-family: SegoeUI;
-  display: inline-block;
-  margin: 5px;
-  color: #3d779b;
-}
-
-.flip-box{
-  display:table-cell;
-  vertical-align:middle
+    width: 48px;
+    height: 27px;
+    font-family: Arial;
+    font-size: 20px;
+    font-weight: normal;
+    font-stretch: normal;
+    font-style: normal;
+    line-height: 1.35;
+    letter-spacing: normal;
+    text-align: center;
+    color: #32617d;
 }
