--- a/src/ui-components/basicInput/selectors/Style.css
+++ b/src/ui-components/basicInput/selectors/Style.css
@@ -2,16 +2,24 @@
 *----- CheckBox Style --------*
 */
 
+.checkText{
+  font-family: Arial;
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.43;
+  letter-spacing: normal;
+  text-align: left;
+  color: #000000;
+}
+
 .checkLabel{
     display: block;
     position: relative;
-    padding-left: 20px;
+    padding-left: 27px;
     margin-bottom: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
+    
     user-select: none;
 }
 .checkLabel input {
@@ -23,6 +31,7 @@
   }
 
 .checkmark {
+    z-index: -1;
     position: absolute;
     top: 0;
     left: 0;
@@ -52,7 +61,6 @@
 
   .checkLabel .checkmark:after {
     left: 3px;
-    top: 1px;
     width: 5px;
     height: 10px;
     border: solid white;
