add prop align to item component

--- a/src/ui-components/infoDisplay/items/Style.css
+++ b/src/ui-components/infoDisplay/items/Style.css
@@ -2,6 +2,6 @@
 
     border: solid 1px #1f3d4e;
     display: flex;
-  flex-wrap: wrap;
-  align-content:center
+    align-items: center;
+    justify-content: right;
 }
