--- a/src/ui-components/regulonDB-web/cover/Style.css
+++ b/src/ui-components/regulonDB-web/cover/Style.css
@@ -1,17 +1,21 @@
-
+.coverComponent{
+    height: 60vh;
+    width: 100%;
+}
 .coverComponent-Glass{
     position: absolute;
     height: 60vh;
     width: 100%;
     background-color: #000000;
     border: 1px solid black;
-    opacity: 0.6;
+    opacity: 0.5;
 }
 
 .coverComponent-content{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     text-indent: 30px;
+    padding-top: 50px;
     position: absolute;
     height: 60vh;
     width: 100%;
