--- a/src/ui-components/regulonDB-web/mainMenu/Style.css
+++ b/src/ui-components/regulonDB-web/mainMenu/Style.css
@@ -3,3 +3,14 @@
     height: 80px;
     background-color: #32617d;
   }
+.menuBar-Home{
+  padding-top: 10px;
+  padding-left: 40px;
+  padding-right: 35px;
+  float: left;
+}
+
+.menuBar-Menu{
+  padding-left: 5px;
+  float: left;
+}
