--- a/src/ui-components/basicInput/buttons/Buttons.module.css
+++ b/src/ui-components/basicInput/buttons/Buttons.module.css
@@ -80,7 +80,7 @@
     box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.747);
     }
 
-.flip{
+.flipComponent{
     display: flex;
     border: none;
     outline: none;
