--- a/src/ui-components/regulonDB-web/mainMenu/MainMenu.module.css
+++ b/src/ui-components/regulonDB-web/mainMenu/MainMenu.module.css
@@ -1,16 +1,16 @@
-.menuBar-Component {
+.menuBarComponent {
     width: 100%;
     height: 80px;
     background-color: #32617d;
   }
-.menuBar-Home{
+.menuBarHome{
   padding-top: 10px;
   padding-left: 40px;
   padding-right: 35px;
   float: left;
 }
 
-.menuBar-Menu{
+.menuBarMenu{
   padding-left: 5px;
   float: left;
 }
