--- a/src/ui-components/regulonDB-web/cover/Cover.module.css
+++ b/src/ui-components/regulonDB-web/cover/Cover.module.css
@@ -2,7 +2,7 @@
     height: 60vh;
     width: 100%;
 }
-.coverComponent-Glass{
+.coverComponentGlass{
     position: absolute;
     height: 60vh;
     width: 100%;
@@ -10,7 +10,7 @@
     border: 1px solid black;
 }
 
-.coverComponent-content{
+.coverComponentContent{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     text-indent: 30px;
@@ -20,7 +20,7 @@
     width: 100%;
 }
 
-.coverComponent-background{
+.coverComponentBackground{
     max-height: 60vh;
     overflow: hidden;
 }
