--- a/src/ui-components/basicInput/selectors/Selectors.module.css
+++ b/src/ui-components/basicInput/selectors/Selectors.module.css
@@ -74,7 +74,7 @@
 *----- RadioButtonStyle --------*
 */
 
-.r-checkmark {
+.rCheckmark {
     position: absolute;
     top: 0;
     left: 0;
@@ -86,25 +86,25 @@
   }
   
 
-  .checkLabel:hover input ~ .r-checkmark {
+  .checkLabel:hover input ~ .rCheckmark {
     background-color: #ccc;
   }
 
-  .checkLabel input:checked ~ .r-checkmark {
+  .checkLabel input:checked ~ .rCheckmark {
     background-color: white;
   }
 
-  .r-checkmark:after {
+  .rCheckmark:after {
     content: "";
     position: absolute;
     display: none;
   }
 
-  .checkLabel input:checked ~ .r-checkmark:after {
+  .checkLabel input:checked ~ .rCheckmark:after {
     display: block;
   }
 
-  .checkLabel .r-checkmark:after {
+  .checkLabel .rCheckmark:after {
     top: 3px;
 	left: 3px;
 	width: 9px;
