--- a/src/ui-components/regulonDB-web/cover/Cover.module.css
+++ b/src/ui-components/regulonDB-web/cover/Cover.module.css
@@ -1,9 +1,10 @@
 .coverComponent{
+    position: fixed;
     height: 60vh;
     width: 100%;
 }
 .coverComponentGlass{
-    position: absolute;
+    position: fixed;
     height: 60vh;
     width: 100%;
     background-color: #000000;
@@ -11,6 +12,7 @@
 }
 
 .coverComponentContent{
+    z-index: 1;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     text-indent: 30px;
@@ -21,6 +23,7 @@
 }
 
 .coverComponentBackground{
+    z-index: 0;
     max-height: 60vh;
     overflow: hidden;
 }
