--- a/src/ui-components/regulonDB-web/cover/Cover.module.css
+++ b/src/ui-components/regulonDB-web/cover/Cover.module.css
@@ -1,10 +1,9 @@
 .coverComponent{
-    position: fixed;
     height: 60vh;
     width: 100%;
 }
 .coverComponentGlass{
-    position: fixed;
+    position: absolute;
     height: 60vh;
     width: 100%;
     background-color: #000000;
